--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <spring.security.version>3.2.3.RELEASE</spring.security.version>
         <spring.security.oauth.version>1.0.5.RELEASE</spring.security.oauth.version>
         <spring.security.jwt.version>1.0.1.RELEASE</spring.security.jwt.version>
+        <spring.ldap.version>1.3.2.RELEASE</spring.ldap.version>
+        <apacheds.api.ldap.model.version>1.0.0-M22</apacheds.api.ldap.model.version>
         <aspectj.version>1.6.9</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
