--- a/uaa/pom.xml
+++ b/uaa/pom.xml
@@ -397,13 +397,6 @@
             <artifactId>mariadb-java-client</artifactId>
         </dependency>
 
-        <!-- <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.3</version>
-            <scope>runtime</scope>
-            </dependency> -->
-
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>cloudfoundry-identity-common</artifactId>
@@ -433,6 +426,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-all</artifactId>
+            <version>1.5.5</version>
+        </dependency>
     </dependencies>
 
 </project>
