--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
     - TESTENV=default,coverage
     - TESTENV=mysql,default,coverage
     - TESTENV=postgresql,default,coverage
+    - TESTENV=ldap,default,coverage
+    - TESTENV=keystone,default,coverage
 services:
   - mysql
   - postgresql
@@ -23,6 +25,8 @@ before_install:
   - mysql -e "SET PASSWORD FOR 'root'@'localhost' = PASSWORD('changeme');"
   - mysql -e "SET PASSWORD FOR 'root'@'127.0.0.1' = PASSWORD('changeme');"
 install:
+  - if [ "$SPRING_PROFILES" = "ldap,default,coverage" ]; then ./scripts/ldap/configure-manifest.sh; fi
+  - if [ "$SPRING_PROFILES" = "keystone,default,coverage" ]; then ./scripts/keystone/configure-manifest.sh; fi
   - mvn install -DskipTests -P coverage --quiet
   - mkdir -p target/tomcat && tar zxf tomcat.tar.gz -C target/tomcat --strip-components 1 && rm -rf target/tomcat/webapps/*
   - mvn -Dwar.exploded.dir=`pwd`/target/tomcat/webapps/api --quiet -pl samples/api war:exploded
